[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Font/Magnolia Script.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Mechanics/MultipleObjective.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.9185, 45.4008 )

[node name="MultipleObjective" type="Node2D"]
script = ExtResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 17.5129
margin_top = 17.8004
margin_right = 685.513
margin_bottom = 282.8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.054902, 0.054902, 0.054902, 1 )
text = "0/2"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="FinalArea" to="." method="_on_FinalArea_body_entered"]
